--- a/src/app/shared/pages/login/login.component.html
+++ b/src/app/shared/pages/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="login-container d-flex justify-content-center align-items-center container-fluid">
+<div class="d-flex flex-column align-items-center vh-100">
   <div class="wrapper">
     <div class="card-switch">
         <label class="switch">
-          <input type="checkbox" class="toggle">
-          <span class="slider"></span>
-          <span class="card-side"></span>
-          <div class="flip-card__inner">
-            <div class="flip-card__front">
+            <input class="toggle" type="checkbox">
+            <span class="slider"></span>
+            <span class="card-side"></span>
+            <div class="flip-card__inner">
+              <div class="flip-card__front">
                 <div class="title">Log in</div>
                 <form class="flip-card__form" action="">
                   <input class="flip-card__input" name="username" placeholder="Enter Your Username" type="text" required>
@@ -41,18 +41,45 @@
                   <span><a class="nav-link" href="">Forgot Password?</a></span>
                   <button class="flip-card__btn">Let`s go!</button>
                 </form>
+              </div>
+              <div class="flip-card__back">
+                  <div class="title">Sign up</div>
+                  <form action="" class="flip-card__form">
+                    <input type="name" placeholder="Name" class="flip-card__input">
+                    <input type="email" placeholder="Email" name="email" class="flip-card__input">
+                    <input type="password" placeholder="Password" name="password" class="flip-card__input">
+                    <div class="login-with">
+                      <div class="button-log">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262" id="google">
+                          <path fill="#4285F4" d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622 38.755 30.023 2.685.268c24.659-22.774 38.875-56.282 38.875-96.027"></path>
+                          <path fill="#34A853" d="M130.55 261.1c35.248 0 64.839-11.605 86.453-31.622l-41.196-31.913c-11.024 7.688-25.82 13.055-45.257 13.055-34.523 0-63.824-22.773-74.269-54.25l-1.531.13-40.298 31.187-.527 1.465C35.393 231.798 79.49 261.1 130.55 261.1"></path>
+                          <path fill="#FBBC05" d="M56.281 156.37c-2.756-8.123-4.351-16.827-4.351-25.82 0-8.994 1.595-17.697 4.206-25.82l-.073-1.73L15.26 71.312l-1.335.635C5.077 89.644 0 109.517 0 130.55s5.077 40.905 13.925 58.602l42.356-32.782"></path>
+                          <path fill="#EB4335" d="M130.55 50.479c24.514 0 41.05 10.589 50.479 19.438l36.844-35.974C195.245 12.91 165.798 0 130.55 0 79.49 0 35.393 29.301 13.925 71.947l42.211 32.783c10.59-31.477 39.891-54.251 74.414-54.251"></path>
+                        </svg>
+                      </div>
+                      <div class="button-log">
+                        <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 1668.56 1221.19" viewBox="0 0 1668.56 1221.19" id="twitter-x">
+                          <path d="M283.94,167.31l386.39,516.64L281.5,1104h87.51l340.42-367.76L984.48,1104h297.8L874.15,558.3l361.92-390.99
+                            h-87.51l-313.51,338.7l-253.31-338.7H283.94z M412.63,231.77h136.81l604.13,807.76h-136.81L412.63,231.77z" transform="translate(52.39 -25.059)"></path>
+                        </svg>
+                      </div>
+                      <div class="button-log">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 48 48" id="discord">
+                          <path fill="#5865F2" d="M40.6607 8.09869C37.5071 6.63024 34.1778 5.58847 30.758 5C30.29 5.85085 29.8666 6.72626 29.4894 7.62256C25.8466 7.06427 22.1421 7.06427 18.4993 7.62256C18.122 6.72635 17.6986 5.85095 17.2308 5C13.8088 5.59344 10.4773 6.63768 7.32049 8.10637C1.05338 17.5368 -0.645532 26.7331 0.203925 35.7988C3.8741 38.5567 7.98207 40.6542 12.3493 42C13.3326 40.6549 14.2028 39.2278 14.9505 37.734C13.5303 37.1946 12.1596 36.529 10.8542 35.745C11.1978 35.4916 11.5338 35.2305 11.8585 34.9771C15.6569 36.7938 19.8026 37.7358 24.0001 37.7358C28.1975 37.7358 32.3432 36.7938 36.1416 34.9771C36.4701 35.2497 36.8061 35.5108 37.1459 35.745C35.838 36.5303 34.4647 37.1971 33.0421 37.7379C33.7888 39.231 34.6591 40.6568 35.6433 42C40.0142 40.6596 44.1253 38.5631 47.7962 35.8026V35.8026C48.7929 25.2893 46.0935 16.1776 40.6607 8.09869ZM16.0265 30.2234C13.6593 30.2234 11.7037 28.0386 11.7037 25.3508C11.7037 22.6629 13.5914 20.4589 16.0189 20.4589C18.4465 20.4589 20.387 22.6629 20.3455 25.3508C20.304 28.0386 18.4389 30.2234 16.0265 30.2234ZM31.9736 30.2234C29.6027 30.2234 27.6546 28.0386 27.6546 25.3508C27.6546 22.6629 29.5423 20.4589 31.9736 20.4589C34.405 20.4589 36.3304 22.6629 36.2889 25.3508C36.2473 28.0386 34.3861 30.2234 31.9736 30.2234Z"></path>
+                        </svg>
+                      </div>
+                      <div class="button-log">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none" viewBox="0 0 48 48" id="linkedin">
+                          <rect width="48" height="48" fill="#0077B5" rx="24"></rect>
+                          <path fill="#fff" d="M37.325 35.325C35.75 35.2875 34.2125 35.2875 32.6375 35.325 32.3 35.325 32.225 35.25 32.225 34.9125 32.225 32.1375 32.225 29.325 32.225 26.55 32.225 25.9125 32.1875 25.275 32 24.675 31.4375 22.725 29.1875 22.0125 27.575 23.325 26.7125 24 26.375 24.9375 26.375 26.0625 26.375 28.6875 26.375 31.3125 26.375 33.9375 26.375 34.275 26.3375 34.6125 26.375 34.9875 26.4125 35.2875 26.2625 35.3625 26 35.325 24.3875 35.325 22.8125 35.325 21.2 35.325 20.9 35.325 20.825 35.25 20.825 34.95 20.8625 32.5875 20.8625 30.225 20.8625 27.825 20.8625 24.9 20.8625 21.975 20.825 19.0875 20.825 18.75 20.9 18.675 21.2 18.675 22.8125 18.675 24.3875 18.675 26 18.675 26.3 18.675 26.375 18.75 26.375 19.05 26.375 19.65 26.375 20.25 26.375 20.9625 26.4875 20.85 26.525 20.8125 26.5625 20.775 28.025 18.6375 30.0875 18.0375 32.525 18.4125 35.3375 18.8625 37.1375 20.8125 37.5875 23.8125 37.7 24.525 37.7375 25.2375 37.7375 25.95 37.7375 28.95 37.7375 31.9125 37.7375 34.9125 37.7375 35.2125 37.6625 35.325 37.325 35.325zM17.825 27C17.825 29.625 17.825 32.25 17.825 34.875 17.825 35.2125 17.75 35.325 17.4125 35.325 15.8375 35.2875 14.2625 35.325 12.6875 35.325 12.3875 35.325 12.3125 35.25 12.3125 34.95 12.3125 29.6625 12.3125 24.3375 12.3125 19.05 12.3125 18.7875 12.3875 18.675 12.6875 18.675 14.3 18.675 15.9125 18.675 17.525 18.675 17.8625 18.675 17.9 18.7875 17.9 19.0875 17.825 21.7125 17.825 24.3375 17.825 27zM18.0875 14.325C17.7125 15.825 16.175 16.6875 14.4125 16.3875 12.5375 16.0875 11.4875 14.25 12.1625 12.45 12.6125 11.325 13.7 10.65 15.0875 10.6875 17.1875 10.65 18.575 12.3375 18.0875 14.325z"></path>
+                        </svg>
+                      </div>
+                    </div>
+                    <button class="flip-card__btn">Confirm!</button>
+                  </form>
+              </div>
             </div>
-            <div class="flip-card__back">
-                <div class="title">Sign up</div>
-                <form class="flip-card__form" action="">
-                  <input class="flip-card__input" name="email" placeholder="Enter Your Email" type="email">
-                  <input class="flip-card__input" placeholder="Enter Your Username" type="text">
-                  <input class="flip-card__input" name="password" placeholder="Enter Your Password" type="password">
-                  <button class="flip-card__btn">Confirm!</button>
-                </form>
-            </div>
-          </div>
-      </label>
+        </label>
     </div>
   </div>
 </div>
