--- a/src/app/shared/components/gltf-viewer/gltf-viewer.component.html
+++ b/src/app/shared/components/gltf-viewer/gltf-viewer.component.html
@@ -1,1 +1,26 @@
-<canvas #canvas id="canvas" style="width: 500px; height: 300px;"></canvas>
+<div class="d-flex flex-row flex-wrap align-items-center justify-content-center gap-5 p-5">
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="Koenigsegg One Pro" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/26d50f742f3241f5a36081d93205c764/embed?ui_theme=dark"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="PP-19-01 Vityaz" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/6d4a89d483374668b05343e71ed7da78/embed?ui_theme=dark"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="LIGHT FIGHTER SPACESHIP - FREE -" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/51616ef53af84fe595c5603cd3e0f3e1/embed?ui_theme=dark"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="FREE Ai based ConceptCar 050 public domain (CC0)" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/3f7a98a53efe48068adddf0c0f3ddbae/embed?ui_theme=dark"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="Buster Drone" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/294e79652f494130ad2ab00a13fdbafd/embed?ui_theme=dark"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="Adam head" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/a7d347b738c041579a8790f539fe0d8f/embed?ui_infos=0&ui_watermark_link=0&ui_watermark=0&ui_theme=dark"></iframe>
+  </div>
+  <div>
+    <iframe width="640" height="380" src="https://sketchfab.com/models/127471a23e0f4790914b13b9052c4912/embed?internal=1&ui_infos=0&ui_controls=0&watermark=0"></iframe>
+  </div>
+  <div class="sketchfab-embed-wrapper">
+    <iframe title="Space King" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="380" src="https://sketchfab.com/models/1a278bb24fdc40ec9a4a8e377c6e544a/embed?ui_theme=dark"></iframe>
+  </div>
+</div>
