--- a/src/app/shared/pages/login/login.component.html
+++ b/src/app/shared/pages/login/login.component.html
@@ -45,9 +45,20 @@
               <div class="flip-card__back">
                   <div class="title">Sign up</div>
                   <form action="" class="flip-card__form">
-                    <input type="name" placeholder="Name" class="flip-card__input">
+                    <input type="name" placeholder="UserName" name="username" class="flip-card__input">
                     <input type="email" placeholder="Email" name="email" class="flip-card__input">
                     <input type="password" placeholder="Password" name="password" class="flip-card__input">
+                    <label for="IsContributor">Are you want to be a contributor</label>
+                    <div class="d-flex">
+                      <div class="me-4">
+                        <input type="radio" name="contributor">
+                        <label for="contributor" class="form-label">Yes</label>
+                      </div>
+                      <div class="ms-4">
+                        <input type="radio" name="contributor">
+                        <label for="contributor" class="form-label">No</label>
+                      </div>
+                    </div>
                     <div class="login-with">
                       <div class="button-log">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262" id="google">
