--- a/src/app/shared/pages/login/login.component.html
+++ b/src/app/shared/pages/login/login.component.html
@@ -8,9 +8,9 @@
             <div class="flip-card__inner">
               <div class="flip-card__front">
                 <div class="title">Log in</div>
-                <form class="flip-card__form" action="">
-                  <input class="flip-card__input" name="username" placeholder="Enter Your Username" type="text" required>
-                  <input class="flip-card__input" name="password" placeholder="Enter Your Password" type="password" required>
+                <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" class="flip-card__form">
+                  <input class="flip-card__input" formControlName="username" placeholder="Enter Your Username" type="text" required>
+                  <input class="flip-card__input" formControlName="password" placeholder="Enter Your Password" type="password" required>
                   <div class="login-with">
                     <div class="button-log">
                       <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262" id="google">
@@ -39,23 +39,23 @@
                     </div>
                   </div>
                   <span><a class="nav-link" href="">Forgot Password?</a></span>
-                  <button class="flip-card__btn">Let`s go!</button>
+                  <button class="flip-card__btn" type="submit">Let`s go!</button>
                 </form>
               </div>
               <div class="flip-card__back">
                   <div class="title">Sign up</div>
-                  <form action="" class="flip-card__form">
-                    <input type="name" placeholder="UserName" name="username" class="flip-card__input">
-                    <input type="email" placeholder="Email" name="email" class="flip-card__input">
-                    <input type="password" placeholder="Password" name="password" class="flip-card__input">
+                  <form [formGroup]="signUpForm" (ngSubmit)="onSignUpSubmit()" class="flip-card__form">
+                    <input type="name" placeholder="UserName" formControlName="userName" class="flip-card__input">
+                    <input type="email" placeholder="Email" formControlName="email" class="flip-card__input">
+                    <input type="password" placeholder="Password" formControlName="password" class="flip-card__input">
                     <label for="IsContributor">Are you want to be a contributor</label>
                     <div class="d-flex">
                       <div class="me-4">
-                        <input type="radio" name="contributor">
+                        <input type="radio" formControlName="isContributor" [value]="true">
                         <label for="contributor" class="form-label">Yes</label>
                       </div>
                       <div class="ms-4">
-                        <input type="radio" name="contributor">
+                        <input type="radio" formControlName="isContributor" [value]="false">
                         <label for="contributor" class="form-label">No</label>
                       </div>
                     </div>
@@ -86,7 +86,7 @@
                         </svg>
                       </div>
                     </div>
-                    <button class="flip-card__btn">Confirm!</button>
+                    <button class="flip-card__btn" type="submit">Confirm!</button>
                   </form>
               </div>
             </div>
