connect db with angular

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
           <li class="nav-item"><a class="nav-link" href="#">AI Video Generator</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Image upscaler</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Background Remover</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Photo editor</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://photoeditorreact.vercel.app/">Photo editor</a></li>
         </ul>
       </div>
       <div class="col-md-3">
